# cuda-examples

./: 02_zip.cu  03_guard.cu  04_map2d.cu  05_broadcast.cu  06_block.cu  08_shared.cu  11_convolution_single_block.cu  11a_convolution_single_block.cu  11b_convolution_multi_block.cu  CMakeLists.txt  device_info.cu  device_info_rtx2080.txt
gpu-puzzles/: 01_map.cu  03_guard.cu  04_map2d.cu  07_blocks2d.cu  09_pooling.cu  10_dot_product.cu  12_prefix_sum.cu  CMakeLists.txt  README.md
mm/: CMakeLists.txt  wmma.cu
mnist/: CMakeLists.txt  linear_layer.cuh  main.cpp  main.cu  wmma_kernel.cuh
mnist/cppdl/: mnist_utils.cpp  mnist_utils.h  serialization.h  tensor.h
mnist/data/: mnist-20-91.82.cppdl
