cmake_minimum_required(VERSION 3.8)
project(cuda_examples CUDA CXX)

if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
    message(FATAL_ERROR "CMAKE_CUDA_ARCHITECTURES must be set. Example: -DCMAKE_CUDA_ARCHITECTURES=75")
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CUDA_STANDARD 17)
set(CMAKE_CUDA_STANDARD_REQUIRED ON)

add_executable(01_map 01_map.cu)
add_executable(02_zip 02_zip.cu)
add_executable(03_guard 03_guard.cu)
add_executable(04_map2d 04_map2d.cu)
add_executable(05_broadcast 05_broadcast.cu)
add_executable(06_block 06_block.cu)
add_executable(07_blocks2d 07_blocks2d.cu)
add_executable(08_shared 08_shared.cu)
add_executable(09_pooling 09_pooling.cu)
add_executable(10_dot_product 10_dot_product.cu)
add_executable(device_info device_info.cu)
