add_executable(01_map 01_map.cu)
add_executable(02_zip 02_zip.cu)
add_executable(03_guard 03_guard.cu)
add_executable(04_map2d 04_map2d.cu)
add_executable(05_broadcast 05_broadcast.cu)
add_executable(06_block 06_block.cu)
add_executable(07_blocks2d 07_blocks2d.cu)
add_executable(08_shared 08_shared.cu)
add_executable(09_pooling 09_pooling.cu)
add_executable(10_dot_product 10_dot_product.cu)
add_executable(11a_convolution_single_block 11a_convolution_single_block.cu)
add_executable(11b_convolution_multi_block 11b_convolution_multi_block.cu)
